--- a/index.html
+++ b/index.html
@@ -1,17 +1,41 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang>
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <head>
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#000" />
-    <title>Project Name</title>
+    <title>AJ Gargash</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.css">
-</head>
+  </head>
 
-<body>
-    <main id="index_page"></main>
+  <body>
+    <main id="index_page" class="f_w_a_j_center">
+      <section class="comming_soon">
 
-</body>
+        <div class="patch_img">
+          <img src="img/patch_img.png">
+        </div>
+        <div class="container">
+          <div class="content text_center">
+            <img src="img/logo.svg">
+            <h2
+              class="text_100 font_pd text_uppercase f_w_s_b color_secondary pt_80 pb_30">
+              coming soon
+            </h2>
+            <p class="text_lg font_hl color_secondary">Got questions? Email us
+              at:</p>
+            <div class="pt_10">
+              <a href="mailto:marketing@ajgargashdevelopment.ae"
+                class="btn_bg_arrow"><img src="img/mail.svg">
+                marketing@ajgargashdevelopment.ae</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+  </body>
 
 </html>
