--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <main id="index_page" class="f_w_a_j_center">
+    <main id="index_page">
       <section class="comming_soon">
 
         <div class="patch_img">
