--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#000" />
     <title>AJ Gargash</title>
+    <meta property="og:title" content="AJ Gargash" />
+    <meta property="og:description" content="AJ Gargash" />
+    <meta property="og:url"
+      content="https://sites.tinglabs.in/projects/aj-gargash-ui/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image"
+      content="https://sites.tinglabs.in/projects/aj-gargash-ui/img/og-image.jpg" />
+    <meta property="og:image:secure_url"
+      content="https://sites.tinglabs.in/projects/aj-gargash-ui/img/og-image.jpg" />
+    <link rel="shortcut icon" type="image/x-icon"
+      href="https://sites.tinglabs.in/projects/aj-gargash-ui/img/favicon.jpg" />
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.css">
   </head>
