--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <p class="text_lg font_hl color_secondary">Got questions? Email us
               at:</p>
             <div class="pt_10">
-              <a href="mailto:marketing@ajgargashdevelopment.ae"
+              <a href="mailto:sales@ajgargashdevelopment.ae"
                 class="btn_bg_arrow"><img src="img/mail.svg">
-                marketing@ajgargashdevelopment.ae</a>
+                sales@ajgargashdevelopment.ae</a>
             </div>
           </div>
         </div>
